-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 10.0.0-beta1
-
None
-
-
27881325a (master)
Any change of the current SHA triggers a fresh rebuild of qml2puppet.
(I assume it is the "execute_process(COMMAND git..." which gets called on each configure and its result triggers a rebuild)
For Gerrit Dashboard: QTCREATORBUG-28784 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
465465,10 | qml2puppet: Don't always recompile qml2puppet | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |